--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="all">All</string>
+    <string name="photos">Photos</string>
+    <string name="videos">Videos</string>
 </resources>
